--- a/template/registration.phtml
+++ b/template/registration.phtml
@@ -4,29 +4,29 @@
         <div class="input_wrapping">
             <label>
                 adres e-mail
-                <input type="email" name="email-name">
+                <input type="email" name="email">
             </label>
             <label>
                 powtórz adres e-mail
-                <input type="email" name="email_repeat-name">
+                <input type="email" name="email_repeat">
             </label>
         </div>
         <div class="input_wrapping">
             <label>
                 nick
-                <input type="text" name="nick-name">
+                <input type="text" name="nick">
             </label>
         </div>
         <div class="input_wrapping">
             <label>
                 hasło
-                <input type="password" name="password-name">
+                <input type="password" name="password">
             </label>
             <label>
                 powtórz hasło
-                <input type="password" name="password_repeat-name">
+                <input type="password" name="password_repeat">
             </label>
         </div>
-        <input type="button" name="registration-name" value="registration">
+        <input type="button" name="registration-name" value="Rejestruj">
     </form>
 </section>
