--- a/template/board.phtml
+++ b/template/board.phtml
@@ -1,4 +1,8 @@
 <section>
+    <?php foreach ($jss as $js): ?>
+        <script src="<?= $js ?>" ></script>
+    <?php endforeach; ?>
+
     <header><h3>Plansza</h3></header>
     <div id="scaling_area"></div>
 </section>
