--- a/template/control_panel.phtml
+++ b/template/control_panel.phtml
@@ -2,29 +2,37 @@
     <fieldset>
         <legend>Parametry</legend>
         <form>
-            <h4>ilość komórek:</h4>
+            <h4>Ilość komórek:</h4>
             <div class="input_wrapping">
                 <label>w poziomie
-                    <input type="number" name="side_size" min="50" max="800">
+                    <input type="number" name="horizontal_amount" value="15" min="100" max="800">
                 </label>
                 <label>w pionie
-                    <input type="number" name="cell_radius" step="0.1" min="0.1" max="50">
+                    <input type="number" name="vertical_amount" value="10" min="75" max="600">
                 </label>
             </div>
             <div class="input_wrapping">
                 <label>szybkość symulacji
-                    <input type="range" value="10" min="0.5" max="20" step="0.1">
+                    <input type="range" name="frequency" value="10" min="0.5" max="20" step="0.1">
                 </label>
             </div>
             <div class="input_wrapping">
-                <input type="button" name="start-name" value="start">
-                <input type="button" name="stop-name" value="stop">
+                <input type="button" name="start" value="start">
+                <input type="button" name="stop" value="stop">
             </div>
             <div class="input_wrapping">
-                <input type="button" name="previous-name" value="poprzedni krok">
-                <input type="button" name="next-name" value="następny krok">
+                <!--<input type="button" name="previous" value="poprzedni krok">-->
+                <input type="button" name="next" value="następny krok">
             </div>
-            <input type="button" value="Zapisz" name="save-name">
+            <div class="input_wrapping">
+                <input type="button" name="reset" value="reset">
+            </div>
+
+            <div class="input_wrapping">
+                <input type="button" name="test" value="test">
+            </div>
+
+            <input type="button" value="Zapisz" name="save">
             <p>Efektywna szybkość: <span></span> fps</p>
         </form>
     </fieldset>
