--- a/template/footerer.phtml
+++ b/template/footerer.phtml
@@ -7,6 +7,11 @@
     <p><small>WFiIS</small></p>
     <p><small>Drugi projekt na przedmiot TI</small></p>
 </footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
 </body>
+
+
 
 </html>
