wprowadzenie logiki w javascript, period_finder nie dzialaja, css do doszlifowania

--- a/template/login.phtml
+++ b/template/login.phtml
@@ -1,6 +1,6 @@
 <section>
     <h3>Logowanie</h3>
-    <form action="/Auth/login" method="post">
+    <form action="<?=$appl_path?>Auth/login" method="post">
         <div class="input_wrapping">
             <label>
                 nick
