--- a/template/control_panel.phtml
+++ b/template/control_panel.phtml
@@ -5,11 +5,14 @@
             <h4>Ilość komórek:</h4>
             <div class="input_wrapping">
                 <label>w poziomie
-                    <input type="number" name="horizontal_amount" value="15" min="100" max="800">
+                    <input type="number" name="horizontal_amount" value="15" <!--min="100" max="800"-->>
                 </label>
                 <label>w pionie
-                    <input type="number" name="vertical_amount" value="10" min="75" max="600">
+                    <input type="number" name="vertical_amount" value="10" <!--min="75" max="600"-->>
                 </label>
+                <div class="input_wrapping">
+                    <input type="button" name="set" value="ustaw">
+                </div>
             </div>
             <div class="input_wrapping">
                 <label>szybkość symulacji
@@ -18,20 +21,26 @@
             </div>
             <div class="input_wrapping">
                 <input type="button" name="start" value="start">
-                <input type="button" name="stop" value="stop">
             </div>
             <div class="input_wrapping">
-                <!--<input type="button" name="previous" value="poprzedni krok">-->
                 <input type="button" name="next" value="następny krok">
             </div>
+
+            <!--<div class="input_wrapping">
+                <input type="button" name="test" value="test">
+            </div>-->
+
             <div class="input_wrapping">
                 <input type="button" name="reset" value="reset">
             </div>
-
             <div class="input_wrapping">
-                <input type="button" name="test" value="test">
+                <label>tryb gry
+                    <select name="mode">
+                        <option value="0">zabawa</option>
+                        <option value="1">symulacje</option>
+                    </select>
+                </label>
             </div>
-
             <input type="button" value="Zapisz" name="save">
             <p>Efektywna szybkość: <span></span> fps</p>
         </form>
