--- a/template/login.phtml
+++ b/template/login.phtml
@@ -4,13 +4,13 @@
         <div class="input_wrapping">
             <label>
                 nick
-                <input type="text" name="nick">
+                <input type="text" name="nick" required>
             </label>
         </div>
         <div class="input_wrapping">
         <label>
             hasło
-            <input type="password" name="password">
+            <input type="password" name="password" required>
         </label>
         </div>
         <input type="submit" name="login" value="Loguj">
