--- a/template/registration.phtml
+++ b/template/registration.phtml
@@ -1,32 +1,32 @@
 <section>
     <h3>Rejestracja</h3>
-    <form>
+    <form action="<?=$appl_path?>Auth/register" method="post">
         <div class="input_wrapping">
             <label>
                 adres e-mail
-                <input type="email" name="email">
+                <input type="email" name="email" required>
             </label>
             <label>
                 powtórz adres e-mail
-                <input type="email" name="email_repeat">
+                <input type="email" name="email_repeat" required>
             </label>
         </div>
         <div class="input_wrapping">
             <label>
                 nick
-                <input type="text" name="nick">
+                <input type="text" name="nick" required>
             </label>
         </div>
         <div class="input_wrapping">
             <label>
                 hasło
-                <input type="password" name="password">
+                <input type="password" name="password" required>
             </label>
             <label>
                 powtórz hasło
-                <input type="password" name="password_repeat">
+                <input type="password" name="password_repeat" required>
             </label>
         </div>
-        <input type="button" name="registration-name" value="Rejestruj">
+        <input type="submit" name="registration-name" value="Rejestruj">
     </form>
 </section>
