--- a/template/headerer.phtml
+++ b/template/headerer.phtml
@@ -19,7 +19,8 @@
 </head>
 
 <body>
-
+<!-- pasek statusu -->
+<span id="status"><?=$status ?></span>
 <!-- HEADER -->
 <header>
     <h1>Gra w życie</h1>
