dodanie funkcjobalnosci wylogowywania

--- a/template/headerer.phtml
+++ b/template/headerer.phtml
@@ -31,6 +31,7 @@
 <nav>
     <ul>
         <li><a href="../index.php">Strona główna</a></li>
+        <li><a href="<?=appl_path::$appl_path?>Auth/logout">Wyloguj</a></li>
     </ul>
 </nav>
 
