poprawne dzialanie logowania/rejestracji

--- a/template/board.phtml
+++ b/template/board.phtml
@@ -1,6 +1,6 @@
 <section>
     <?php foreach ($jss as $js): ?>
-        <script src="<?appl_path::$appl_path?><?= $js ?>" ></script>
+        <script src="<?=appl_path::$appl_path.$js?>" ></script>
     <?php endforeach; ?>
 
     <header><h3>Plansza</h3></header>
