plansze trafiaja na serwer

--- a/template/registration.phtml
+++ b/template/registration.phtml
@@ -1,6 +1,6 @@
 <section>
     <h3>Rejestracja</h3>
-    <form action="<?=$appl_path?>Auth/register" method="post">
+    <form action="<?=appl_path::$appl_path?>Auth/register" method="post">
         <div class="input_wrapping">
             <label>
                 adres e-mail
