dodanie informacji o wieku ukladu oraz przygotowanie klasy Automaton po stronie serwera

--- a/template/control_panel.phtml
+++ b/template/control_panel.phtml
@@ -47,6 +47,7 @@
         <p>Efektywna szybkość: <span id="frequency"></span> fps</p>
         <p>Ilość żywych komórek: <span id="lived_amount"></span></p>
         <p>Stan układu: <span id="game_state"></span></p>
+        <p>Wiek układu: <span id="game_age">0</span></p>
     </fieldset>
 
 </aside>
