przenosiny na lokalny komputer

--- a/template/headerer.phtml
+++ b/template/headerer.phtml
@@ -30,7 +30,9 @@
 <!-- NAV -->
 <nav>
     <ul>
-        <li><a href="../index.php">Strona główna</a></li>
+        <li><a href="<?=appl_path::$appl_path?>Main">Strona główna</a></li>
+        <li><a href="<?=appl_path::$appl_path?>Main">Lista </a></li>
+        <li><a href="<?=appl_path::$appl_path?>Main">Lista rekordów</a></li>
         <li><a href="<?=appl_path::$appl_path?>Auth/logout">Wyloguj</a></li>
     </ul>
 </nav>
