dodano nowy widok listy symulacji; brakuje listy rekordow i csss

--- a/template/headerer.phtml
+++ b/template/headerer.phtml
@@ -31,8 +31,8 @@
 <nav>
     <ul>
         <li><a href="<?=appl_path::$appl_path?>Main">Strona główna</a></li>
-        <li><a href="<?=appl_path::$appl_path?>SimList">Lista symulacji</a></li>
-        <li><a href="<?=appl_path::$appl_path?>SimList">Lista rekordów</a></li>
+        <li><a href="<?=appl_path::$appl_path?>SimList/simulations">Lista symulacji</a></li>
+        <li><a href="<?=appl_path::$appl_path?>SimList/records">Lista rekordów</a></li>
         <li><a href="<?=appl_path::$appl_path?>Auth/logout">Wyloguj</a></li>
     </ul>
 </nav>
