--- a/template/simulation_list.phtml
+++ b/template/simulation_list.phtml
@@ -5,24 +5,24 @@
     <h3>Lista rekordów</h3>
     <div id="scrolling_area">
         <div class="row">
-            <div class="item"></div>
+            <div class="item counter">Lp.</div>
             <div class="item">Warunki początkowe</div>
             <div class="item">Efekt końcowe</div>
-            <div class="item"></div>
+            <div class="item">Szczegóły</div>
         </div>
         <?php $i=1; foreach ($simulations as $simulation): ?>
             <?php
                 $horizontal = count($simulation[0]);
                 $vertical = count($simulation[0][0]);
             ?>
-            <div class="item counter"><?=$i."."?></div>
-            <div id="beginning<?=$i?>">
-                <script>
-                        var board = new Board(<?=$horizontal?>, <?=$vertical?>, 2, 50);
-                        board.init_canvas("canvas<?=$i?>", "beginning<?=$i?>");
+            <div class="row">
+                <div class="item counter"><?=$i."."?></div>
+                <div id="beginning<?=$i?>" class="game_canvas item">
+                    <script>
+                        var board = new Board(<?=$horizontal?>, <?=$vertical?>, 10, 100);
+                        board.init_canvas("canvas<?=$i?>beg", "beginning<?=$i?>");
                         <?php for($j=0; $j<$horizontal; ++$j): ?>
                             <?php for($k=0; $k<$vertical; ++$k): ?>
-                                //console.log("test:",board.cell_radius+board.cell_padding);
                                 board.draw_cell(
                                     (<?=$j?>*2+1)*(board.cell_radius+board.cell_padding),
                                     (<?=$k?>*2+1)*(board.cell_radius+board.cell_padding),
@@ -30,7 +30,35 @@
                                 );
                             <?php endfor; ?>
                         <?php endfor; ?>
-                </script>
+                    </script>
+                </div>
+                <div id="end<?=$i?>" class="game_canvas item">
+                    <script>
+                        var board = new Board(<?=$horizontal?>, <?=$vertical?>, 10, 100);
+                        board.init_canvas("canvas<?=$i?>end", "end<?=$i?>");
+                        <?php $last = count($simulation)-1; ?>
+                        <?php for($j=0; $j<$horizontal; ++$j): ?>
+                            <?php for($k=0; $k<$vertical; ++$k): ?>
+                                board.draw_cell(
+                                    (<?=$j?>*2+1)*(board.cell_radius+board.cell_padding),
+                                    (<?=$k?>*2+1)*(board.cell_radius+board.cell_padding),
+                                    <?=($simulation[$last][$j][$k]?1:0)?>
+                                );
+                            <?php endfor; ?>
+                        <?php endfor; ?>
+                    </script>
+                </div>
+                <div class="item">
+                    <p>Czas życia: <span><?=count($simulation)?></span></p>
+                    <p>Wymiary:
+                        <ul>
+                            <li>poziomo: <span><?=$horizontal?></span></li>
+                            <li>pionowo: <span><?=$vertical?></span></li>
+                        </ul>
+                    </p>
+                        <input type="button" value="Usuń" name="delete">
+                        <input type="hidden" name="id" value="<?=$i?>">
+                </div>
             </div>
         <?php ++$i; endforeach; ?>
     </div>
