walidacja formualarza rejestracji

--- a/template/login.phtml
+++ b/template/login.phtml
@@ -1,4 +1,4 @@
-<section>
+<section id="login">
     <h3>Logowanie</h3>
     <form action="<?=appl_path::$appl_path?>Auth/login" method="post">
         <div class="input_wrapping">
