--- a/appl/css/main.css
+++ b/appl/css/main.css
@@ -32,3 +32,37 @@ h3,
 h4 {
     margin: 15px;
 }
+
+/*pasek statusu*/
+#status{
+    color: red;
+}
+
+/*pasek nawigacji*/
+
+nav ul li{
+    display: inline-block;
+    background: rgba(36,36,36,1);
+    border: 1px solid #666;
+    border-radius: 15px;
+    padding: 2px 10px;
+    margin: 0 3px;
+}
+
+nav ul li a:link{
+    color: orange;
+    text-decoration: none;
+}
+
+nav ul li a:visited{
+    color: orange;
+}
+
+nav ul{
+    display: inline-block;
+}
+
+nav{
+    text-align: center;
+    margin-bottom: 50px;
+}
