--- a/auth/css/main.css
+++ b/auth/css/main.css
@@ -27,39 +27,13 @@ main > *{
     display: table-cell;
     vertical-align: top;
     width: 50%;
+}a {
+    text-decoration: none;
 }
 
 footer{
     border-top: gray 1px solid;
 }
-
-/*pasek nawigacji*/
-
-/*nav ul li{
-    display: inline-block;
-    background: rgba(36,36,36,1);
-    border: 1px solid #666;
-    border-radius: 15px;
-    padding: 2px 10px;
-    margin: 0 3px;
-}
-
-nav ul li a:link{
-    color: orange;
-}
-
-nav ul li a:visited{
-    color: orange;
-}
-
-nav ul{
-    display: inline-block;
-}
-
-nav{
-    text-align: center;
-    margin-bottom: 50px;
-}*/
 
 /*formularze*/
 label select{
