--- a/template/headerer.phtml
+++ b/template/headerer.phtml
@@ -31,7 +31,8 @@
     <ul>
         <li><a href="<?=appl_path::$appl_path?>Main">Strona główna</a></li>
         <li><a href="<?=appl_path::$appl_path?>SimList/simulations">Lista symulacji</a></li>
-        <li><a href="<?=appl_path::$appl_path?>SimList/records">Lista rekordów</a></li>
+        <!--<li><a href="<?/*=appl_path::$appl_path*/?>SimList/records">Lista rekordów</a></li>-->
+        <li><a href="<?=appl_path::$appl_path?>About">O stronie</a></li>
         <li><a href="<?=appl_path::$appl_path?>Auth/logout">Wyloguj</a></li>
     </ul>
 </nav>
